syntax = "proto3";

package mwp.m1;

service HeroesService {
  rpc FindOne (FindOneReq) returns (FindOneResp) {}
  rpc FindMany (FindManyReq) returns (FindManyResp) {}
}

message HeroBo {
  int32 id = 1;
  string name = 2;
}

message FindOneReq {
  string source = 1;
  int32 id = 2;
}

message FindOneResp {
  int32 code = 1;
  string msg = 2;
  optional HeroBo hero = 3;
}

message FindManyReq {
  string source = 1;
  int32 id = 2;
}

message FindManyResp {
  int32 code = 1;
  string msg = 2;
  repeated HeroBo list = 3;
}

